--- a/index.html
+++ b/index.html
@@ -6,16 +6,18 @@
     <title>Login - Evilginx Dashboard</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body class="animated-background">
+<body>
     <div class="login-container">
         <h2>Login</h2>
-        <input type="email" id="email" placeholder="Email">
-        <input type="password" id="password" placeholder="Password">
+        <input type="email" id="email" placeholder="Enter Email">
+        <input type="password" id="password" placeholder="Enter Password">
         <button onclick="login()">Login</button>
-        <p id="loginError" class="error-message"></p>
     </div>
-    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js"></script>
+
+    <!-- Firebase SDK -->
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js"></script>
+
     <script src="script.js"></script>
 </body>
 </html>
