--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
         <p id="error-message"></p>
     </div>
 
-    <!-- Firebase SDKs -->
+    <!-- ✅ Firebase SDKs (Corrected) -->
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js"></script>
 
-    <!-- Main Script -->
+    <!-- ✅ Correct Script Path -->
     <script src="script.js"></script>
 </body>
 </html>
