--- a/dashboard.html
+++ b/dashboard.html
@@ -28,11 +28,11 @@
         </table>
     </div>
 
-    <!-- Firebase SDKs -->
+    <!-- ✅ Firebase SDKs (Corrected) -->
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js"></script>
 
-    <!-- Main Script -->
+    <!-- ✅ Correct Script Path -->
     <script src="script.js"></script>
 </body>
 </html>
