--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <p id="error-message"></p>
     </div>
 
-    <!-- ✅ Firebase SDKs (Corrected) -->
+    <!-- ✅ Correct Firebase SDKs -->
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js"></script>
 
