--- a/dashboard.html
+++ b/dashboard.html
@@ -28,7 +28,7 @@
         </table>
     </div>
 
-    <!-- ✅ Firebase SDKs (Corrected) -->
+    <!-- ✅ Firebase SDKs -->
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js"></script>
 
