--- a/index.html
+++ b/index.html
@@ -3,23 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Login Page</title>
     <link rel="stylesheet" href="styles.css">
+
+    <!-- Firebase SDK -->
+    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js"></script>
+
+    <!-- Firebase Config (✅ Must be before script.js) -->
+    <script src="firebase-config.js"></script>
+
+    <!-- Main script -->
+    <script defer src="script.js"></script>
 </head>
 <body>
     <div class="login-container">
         <h2>Login</h2>
         <input type="email" id="email" placeholder="Email">
         <input type="password" id="password" placeholder="Password">
-        <button id="loginBtn">Login</button>
-        <p id="error-message"></p>
+        <button id="loginButton">Login</button>
     </div>
-
-    <!-- ✅ Correct Firebase SDKs -->
-    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js"></script>
-
-    <!-- ✅ Correct Script Path -->
-    <script src="script.js"></script>
 </body>
 </html>
