--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login | Evilginx Dashboard</title>
     <link rel="stylesheet" href="styles.css">
+    <!-- Load Firebase SDK -->
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js"></script>
 </head>
 <body>
     <div class="login-container">
@@ -15,6 +18,7 @@
         <p id="loginError" style="color: red;"></p>
     </div>
 
+    <!-- Load Firebase Config and Script -->
     <script src="firebase-config.js"></script>
     <script src="script.js"></script>
 </body>
