--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
         <p id="loginError" style="color: red;"></p>
     </div>
 
-    <!-- Firebase SDK (MUST LOAD BEFORE CUSTOM SCRIPTS) -->
+    <!-- Firebase SDK -->
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js"></script>
 
-    <!-- Firebase Config and Script -->
+    <!-- Firebase Config & Script -->
     <script src="firebase-config.js"></script>
     <script src="script.js"></script>
 </body>
