--- a/dashboard.html
+++ b/dashboard.html
@@ -16,8 +16,10 @@
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js"></script>
 
-    <!-- Firebase Config and Dashboard Script -->
+    <!-- Firebase Config and Script -->
     <script src="firebase-config.js"></script>
+    <script src="script.js"></script>
+
     <script>
         // Redirect if not logged in
         firebase.auth().onAuthStateChanged(user => {
