--- a/dashboard.html
+++ b/dashboard.html
@@ -13,16 +13,15 @@
     </div>
 
     <!-- Firebase SDK -->
-    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js"></script>
+    <script type="module" src="firebase-config.js"></script>
+    <script type="module" src="script.js"></script>
 
-    <!-- Firebase Config and Script -->
-    <script src="firebase-config.js"></script>
-    <script src="script.js"></script>
+    <script type="module">
+        import { auth } from "./firebase-config.js";
+        import { onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js";
 
-    <script>
         // Redirect if not logged in
-        firebase.auth().onAuthStateChanged(user => {
+        onAuthStateChanged(auth, user => {
             if (!user) {
                 window.location.href = "index.html";
             }
@@ -30,7 +29,7 @@
 
         // Logout function
         document.getElementById("logoutBtn").addEventListener("click", function () {
-            firebase.auth().signOut().then(() => {
+            signOut(auth).then(() => {
                 window.location.href = "index.html";
             }).catch(error => {
                 console.error("Logout Error:", error);
