--- a/dashboard.html
+++ b/dashboard.html
@@ -3,38 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard | Evilginx</title>
+    <title>Dashboard</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="dashboard">
-        <h1>Welcome to the Evilginx Dashboard</h1>
-        <button id="logoutBtn">Logout</button>
+    <h1>Dashboard</h1>
+    <button onclick="logout()">Logout</button>
+
+    <div class="dashboard-buttons">
+        <button onclick="generateLink()">Generate Link</button>
+        <button onclick="fetchCapturedSessions()">Captured Sessions</button>
+        <button onclick="fetchCookies()">Cookies</button>
     </div>
 
+    <div id="data-display"></div>
+
     <!-- Firebase SDK -->
-    <script type="module" src="firebase-config.js"></script>
-    <script type="module" src="script.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js"></script>
 
-    <script type="module">
-        import { auth } from "./firebase-config.js";
-        import { onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js";
+    <!-- Firebase Config -->
+    <script src="firebase-config.js"></script>
 
-        // Redirect if not logged in
-        onAuthStateChanged(auth, user => {
-            if (!user) {
-                window.location.href = "index.html";
-            }
-        });
-
-        // Logout function
-        document.getElementById("logoutBtn").addEventListener("click", function () {
-            signOut(auth).then(() => {
-                window.location.href = "index.html";
-            }).catch(error => {
-                console.error("Logout Error:", error);
-            });
-        });
-    </script>
+    <!-- Main Script -->
+    <script src="script.js"></script>
 </body>
 </html>
