--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
         <input type="email" id="email" placeholder="Email">
         <input type="password" id="password" placeholder="Password">
         <button onclick="login()">Login</button>
-        <p id="error-message"></p>
+        <p id="login-error" style="color: red;"></p>
     </div>
 
-    <!-- Firebase SDKs (Fix for "Unexpected token 'export'") -->
-    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js"></script>
-    
-    <!-- Firebase Config -->
+    <!-- ✅ Load Firebase from script tags -->
+    <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-auth.js"></script>
+
+    <!-- ✅ Load Firebase config -->
     <script src="firebase-config.js"></script>
-    
-    <!-- Main Script -->
+
+    <!-- ✅ Load script.js -->
     <script src="script.js"></script>
 </body>
 </html>
